Rename header__search guests

--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -191,17 +191,17 @@
                                   </div>
                                   <div class="_1mqc21n">
                                     <div
-                                      class="_3zlfom"
+                                      class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--0-stepper"
                                     >
                                       <button
-                                        class="_ul9u8c"
+                                        class="header__search-tabs-filter-body-guests-btn"
                                         type="button"
                                         aria-label="Subtract"
                                         aria-describedby="stepper-item--0-row-title"
                                         data-testid="stepper-item--0-stepper-decrease-button"
                                       >
-                                        <span class="_8ovatg"
+                                        <span class="header__search-tabs-filter-body-guests-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -221,25 +221,25 @@
                                             <path d="m2 16h28"></path></svg
                                         ></span>
                                       </button>
-                                      <div class="_1665lvv">
+                                      <div class="header__search-tabs-filter-body-guests-count">
                                         <span
                                           aria-hidden="true"
                                           data-testid="stepper-item--0-stepper-value"
                                           >10</span
                                         ><span
-                                          class="_25sktq"
+                                          class="header__search-tabs-filter-body-guests-text"
                                           data-testid="stepper-item--0-stepper-a11y-value-label"
                                           >10 guests</span
                                         >
                                       </div>
                                       <button
-                                        class="_ul9u8c"
+                                        class="header__search-tabs-filter-body-guests-btn"
                                         type="button"
                                         aria-label="Add"
                                         aria-describedby="stepper-item--0-row-title"
                                         data-testid="stepper-item--0-stepper-increase-button"
                                       >
-                                        <span class="_8ovatg"
+                                        <span class="header__search-tabs-filter-body-guests-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -288,17 +288,17 @@
                                   </div>
                                   <div class="_1mqc21n">
                                     <div
-                                      class="_3zlfom"
+                                      class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--1-stepper"
                                     >
                                       <button
-                                        class="_ul9u8c"
+                                        class="header__search-tabs-filter-body-guests-btn"
                                         type="button"
                                         aria-label="Subtract"
                                         aria-describedby="stepper-item--1-row-title"
                                         data-testid="stepper-item--1-stepper-decrease-button"
                                       >
-                                        <span class="_8ovatg"
+                                        <span class="header__search-tabs-filter-body-guests-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -318,25 +318,25 @@
                                             <path d="m2 16h28"></path></svg
                                         ></span>
                                       </button>
-                                      <div class="_1665lvv">
+                                      <div class="header__search-tabs-filter-body-guests-count">
                                         <span
                                           aria-hidden="true"
                                           data-testid="stepper-item--1-stepper-value"
                                           >6</span
                                         ><span
-                                          class="_25sktq"
+                                          class="header__search-tabs-filter-body-guests-text"
                                           data-testid="stepper-item--1-stepper-a11y-value-label"
                                           >6 beds</span
                                         >
                                       </div>
                                       <button
-                                        class="_ul9u8c"
+                                        class="header__search-tabs-filter-body-guests-btn"
                                         type="button"
                                         aria-label="Add"
                                         aria-describedby="stepper-item--1-row-title"
                                         data-testid="stepper-item--1-stepper-increase-button"
                                       >
-                                        <span class="_8ovatg"
+                                        <span class="header__search-tabs-filter-body-guests-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -385,17 +385,17 @@
                                   </div>
                                   <div class="_1mqc21n">
                                     <div
-                                      class="_3zlfom"
+                                      class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--2-stepper"
                                     >
                                       <button
-                                        class="_ul9u8c"
+                                        class="header__search-tabs-filter-body-guests-btn"
                                         type="button"
                                         aria-label="Subtract"
                                         aria-describedby="stepper-item--2-row-title"
                                         data-testid="stepper-item--2-stepper-decrease-button"
                                       >
-                                        <span class="_8ovatg"
+                                        <span class="header__search-tabs-filter-body-guests-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -415,25 +415,25 @@
                                             <path d="m2 16h28"></path></svg
                                         ></span>
                                       </button>
-                                      <div class="_1665lvv">
+                                      <div class="header__search-tabs-filter-body-guests-count">
                                         <span
                                           aria-hidden="true"
                                           data-testid="stepper-item--2-stepper-value"
                                           >3</span
                                         ><span
-                                          class="_25sktq"
+                                          class="header__search-tabs-filter-body-guests-text"
                                           data-testid="stepper-item--2-stepper-a11y-value-label"
                                           >3 bedrooms</span
                                         >
                                       </div>
                                       <button
-                                        class="_ul9u8c"
+                                        class="header__search-tabs-filter-body-guests-btn"
                                         type="button"
                                         aria-label="Add"
                                         aria-describedby="stepper-item--2-row-title"
                                         data-testid="stepper-item--2-stepper-increase-button"
                                       >
-                                        <span class="_8ovatg"
+                                        <span class="header__search-tabs-filter-body-guests-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -482,17 +482,17 @@
                                   </div>
                                   <div class="_1mqc21n">
                                     <div
-                                      class="_3zlfom"
+                                      class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--3-stepper"
                                     >
                                       <button
-                                        class="_ul9u8c"
+                                        class="header__search-tabs-filter-body-guests-btn"
                                         type="button"
                                         aria-label="Subtract"
                                         aria-describedby="stepper-item--3-row-title"
                                         data-testid="stepper-item--3-stepper-decrease-button"
                                       >
-                                        <span class="_8ovatg"
+                                        <span class="header__search-tabs-filter-body-guests-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -512,25 +512,25 @@
                                             <path d="m2 16h28"></path></svg
                                         ></span>
                                       </button>
-                                      <div class="_1665lvv">
+                                      <div class="header__search-tabs-filter-body-guests-count">
                                         <span
                                           aria-hidden="true"
                                           data-testid="stepper-item--3-stepper-value"
                                           >2.5</span
                                         ><span
-                                          class="_25sktq"
+                                          class="header__search-tabs-filter-body-guests-text"
                                           data-testid="stepper-item--3-stepper-a11y-value-label"
                                           >2.5 bathrooms</span
                                         >
                                       </div>
                                       <button
-                                        class="_ul9u8c"
+                                        class="header__search-tabs-filter-body-guests-btn"
                                         type="button"
                                         aria-label="Add"
                                         aria-describedby="stepper-item--3-row-title"
                                         data-testid="stepper-item--3-stepper-increase-button"
                                       >
-                                        <span class="_8ovatg"
+                                        <span class="header__search-tabs-filter-body-guests-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
