--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -381,7 +381,7 @@
                                 aria-label="Subtract"
                                 data-testid="undefined-decrease-button"
                               >
-                                <span class="_8ovatg"
+                                <span class="header__search-tabs-filter-body-guests-icon"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -401,7 +401,7 @@
                                     <path d="m2 16h28"></path></svg
                                 ></span>
                               </button>
-                              <div class="_1665lvv">
+                              <div class="header__search-tabs-filter-body-guests-count">
                                 <div class="_ia55b">
                                   <div class="_1h4ezu9">
                                     <label
@@ -434,7 +434,7 @@
                                 aria-label="Add"
                                 data-testid="undefined-increase-button"
                               >
-                                <span class="_8ovatg"
+                                <span class="header__search-tabs-filter-body-guests-icon"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
